# router/common.go
@@ -8,5 +8,6 @@ import (
 func SetupCommonRoutes(router fiber.Router) {
     common := router.Group("/common")
     common.Get("/country/list", controller.GetCountries)
+    common.Get("/login", controller.Authenticate)
     common.Get("/patient", controller.GetPatientData)
 }
